[package]
name = "lila-gif"
publish = false
description = "Webservice to render gifs of chess positions and games"
repository = "https://github.com/lichess-org/lila-gif"
readme = "README.md"
license = "AGPL-3.0+"
categories = ["games", "multimedia"]
keywords = ["chess", "gif", "lichess"]
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
shakmaty = "0.30"
serde_with = "3"
ndarray = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
arrayvec = { version = "0.7", features = ["serde"] }
clap = { version = "4", features = ["derive", "deprecated", "env"] }
gift = "0.13"
futures = "0.3"
tikv-jemallocator = { version = "0.7", features = ["unprefixed_malloc_on_supported_platforms"] }
listenfd = "1"

[profile.release]
lto = true
